[tool.poetry]
name = "vgg-pytorch-pl"
version = "0.1.0"
description = "An implementation of VGG in Pytorch Lightning"
authors = ["erikdao <cuong@neuraltalks.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchvision = "^0.8.2"
pytorch-lightning = "^1.2.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
jupyterlab = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
